src/objects/Beer__c.object
<CustomObject>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <description>descrption</description>
        <fullName>Brewery__c</fullName>
        <label>Brewery</label>
        <referenceTo>Brewery__c</referenceTo>
        <relationshipLabel>Beers</relationshipLabel>
        <relationshipName>Beers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Beer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Beer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>